Finished renaming Blazor to CSharpWeb

--- a/CSharpWebApplication1/CSharpWebApplication1.csproj
+++ b/CSharpWebApplication1/CSharpWebApplication1.csproj
@@ -4,6 +4,6 @@
     <OutputType>exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CSharpWeb.Runtime\Blazor.Runtime.csproj" />
+    <ProjectReference Include="..\CSharpWeb.Runtime\CSharpWeb.Runtime.csproj" />
   </ItemGroup>
 </Project>
